Эксперимент с проверкой, создаётся ли "глубокий" каталог средствами API Яндекс.Диск-а, провелился, так как был задействован метод CloudWriter-а, создающий каталог вглубь поэтапно, а не сразу.

--- a/app/src/main/res/layout/fragment_reading_and_dir_creaton.xml
+++ b/app/src/main/res/layout/fragment_reading_and_dir_creaton.xml
@@ -51,6 +51,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/deepDirPath"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="middle"
+                android:ems="10"
+                android:inputType="text"
+                android:singleLine="true"
+                android:text="Имя глубокого каталога"
+                android:textAlignment="center" />
+
+            <ImageButton
+                android:id="@+id/refreshDeepNameButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                app:srcCompat="@drawable/baseline_refresh_24" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/createDeepDirButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Создать глубокую папку"
+            android:textAllCaps="false"
+            android:textSize="16sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
